src/test/resources/Parser/SyntaxErrors/WrongNumberOfIdentifiersInFor.front
class A:
    f() {
        arr := [bool?, 22];
        for a,b,c : arr {}
    }